--- a/BankasU2/css/login.css
+++ b/BankasU2/css/login.css
@@ -1,11 +1,19 @@
 .login {
-    border-radius: 10px;
-    background-color: rgb(119, 153, 153);
-  }
-  .login-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    background-color: rgb(219, 219, 219);
-  }
+  height: 300px;
+  width: 300px;
+  border-radius: 10px;
+  background-color: rgb(192, 154, 230);
+}
+
+.login-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+   background-color: rgb(214, 200, 228);
+  text-align: center;
+}
+
+.form-control {
+   text-align: center;
+}
