--- a/BankasU2/css/menu.css
+++ b/BankasU2/css/menu.css
@@ -4,7 +4,7 @@
     align-items: center;
     gap: 10px;
     height: 50px;
-    /* background-color: rgb(127, 177, 201); */
+    font-size: 1.2em
   }
   
   form button {
@@ -14,15 +14,20 @@
   .menu-btn {
     padding: 10px 25px;
     border-radius: 5px;
-    background-color: rgb(210, 255, 255);
+    background-color: rgb(176, 140, 214);
     cursor: pointer;
   }
   
   .menu-btn:hover {
-    background-color: rgb(210, 255, 255, 0.2);
+    background-color: rgb(149, 107, 194);
   }
   
   .menu-btn a {
     text-decoration: none;
-    color: black;
+    color:  rgb(0, 0, 0);
+  }
+  
+  .thead-purple {
+    color: rgb(0, 0, 0);
+    font-size: 1.5em;
   }
